--- a/public/lab_1/index.html
+++ b/public/lab_1/index.html
@@ -1,7 +1,15 @@
-fruits list:
-apple
-Hello world
-orange
-pomelo
-
-Lorem ipsum generator: https://www.lipsum.com/
+<!DOCTYPE html>
+<html lang = "en">
+<meta charset="utf-8">
+<head><title>Marta Gonzalez's Lab 1</title></head>
+<body>
+    <h1>Marta Gonzalez's Lab 1</h1>
+    <img src = "IMG_2681.jpg" alt = "My dog, Mudge"
+    class = "fit-picture">
+</body>
+<ul>
+    <li>Napping</li>
+    <li>Humans</li>
+    <li>Belly Rubs</li>
+</ul>
+</html>
