--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -49,8 +49,8 @@
       <div class = "aside">
       <h2>Favourite photos</h2>
       <a href="IMG_2671.jpg"><img src="IMG_2671.jpg" alt="My dog, Princesa, in a tropical dog shirt"></a>
-      <a href="IMG_3204.jpg"><img src="IMG_3204.jpg" alt="My best friend's beautiful cat, Bandit"></a>
-      <a href="IMG_3202.jpg"><img src="IMG_3202.jpg" alt="My good friend's new puppy, Arya"></a>
+      <a href="IMG_3204.JPG"><img src="IMG_3204.JPG" alt="My best friend's beautiful cat, Bandit"></a>
+      <a href="IMG_3202.JPG"><img src="IMG_3202.JPG" alt="My good friend's new puppy, Arya"></a>
       <a href="IMG_0671.jpg"><img src="IMG_0671.jpg" alt="My dog, Princesa, freshly groomed with a bow around her neck"></a>
   </div>
       </div>
