--- a/public/lab_4/index.html
+++ b/public/lab_4/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>
+        Marta Gonzalez's Lab 4
+    </title>
+    <link rel = "stylesheet" href = "style.css"/>
+    </head>
+</title>
+<body>
+    <div class = header>
+        <h1>
+            Marta Gonzalez's Lab 1
+        </h1>
+    <form>
+        <ul>
+        <li>
+            <button type = "submit">
+                Submit
+            </button>
+        </li>
+        </ul>
+        <textarea rows = "5", cols = "33">
+            hello world my name is ale gonzalez and i am in 377
+        </textarea>
+        <ul class = "flex-outer">
+            <li>
+                <label for = "first-name">
+                    First Name
+                </label>
+                <input type = "text" id = "first-name" placeholder = "enter first name here">
+            </li>
+
+        </ul>
+    </form>
+    </div>
+</body>
+</html>
 hello world
