--- a/public/lab_4/index.html
+++ b/public/lab_4/index.html
@@ -13,28 +13,43 @@
         <h1>
             Marta Gonzalez's Lab 1
         </h1>
-    <form>
-        <ul>
+    </div>
+    <div class = main>
+    <form action = "/api" method = "post">
+    <ul class = ".flex-outer">
         <li>
-            <button type = "submit">
-                Submit
-            </button>
+            <label for = "first-name">First Name</label>
+            <input type = "text" id = "first-name" placeholder = "Enter your first name here">
         </li>
-        </ul>
-        <textarea rows = "5", cols = "33">
-            hello world my name is ale gonzalez and i am in 377
-        </textarea>
-        <ul class = "flex-outer">
-            <li>
-                <label for = "first-name">
-                    First Name
-                </label>
-                <input type = "text" id = "first-name" placeholder = "enter first name here">
-            </li>
-
-        </ul>
-    </form>
+        <li>
+            <label for = "last-name">Last Name</label>
+            <input type = "text" id = "last-name" placeholder = "Enter your last name here">
+        </li>
+        <li>
+            <label for = "email">Email</label>
+            <input type = "email" id = "email" placeholder = "Enter your email  here">
+        </li>
+        <li>
+            <label for = "phone">Phone</label>
+            <input type = "tel" id = "phone" placeholder = "Enter your phone number here">
+        </li>
+        <li>
+            <label for = "message">Message</label>
+            <textarea rows = "5" cols = "33" id = "message" placeholder = "Enter your message here"></textarea>
+        </li>
+        <li>
+            <p>Age</p>
+            <ul class = ".flex-inner">
+                18-35
+                35-50
+                50-65
+            </ul>
+        </li>
+        <li>
+            <button type = "submit">Submit</button>
+        </li>
+    </ul>
+</form>
     </div>
 </body>
 </html>
-hello world
