--- a/public/lab_4/index.html
+++ b/public/lab_4/index.html
@@ -40,9 +40,18 @@
         <li>
             <p>Age</p>
             <ul class = ".flex-inner">
-                18-35
-                35-50
-                50-65
+                <li>
+                    <input type = "checkbox" id = "eighteen-to-thirtyfive">
+                    <label for = "eighteen-to-thirtyfive">18-35</label>
+                </li>
+                <li>
+                    <input type = "checkbox" id = "thirtyfive-to-fifty">
+                    <label for = "thirtyfive-to-fifty">35-50</label>
+                </li>
+                <li>
+                    <input type = "checkbox" id = "fifty-to-sixtyfive">
+                    <label for = "fifty-to-sixtyfive">50-65</label>
+                </li>
             </ul>
         </li>
         <li>
