--- a/public/lab_4/index.html
+++ b/public/lab_4/index.html
@@ -5,18 +5,18 @@
     <title>
         Marta Gonzalez's Lab 4
     </title>
+    <link href="https://fonts.googleapis.com/css2?family=Kufam:ital,wght@1,400;1,500&display=swap" rel="stylesheet">
     <link rel = "stylesheet" href = "style.css"/>
-    </head>
-</title>
+</head>
 <body>
     <div class = header>
         <h1>
-            Marta Gonzalez's Lab 1
+            Marta Gonzalez's Lab 4
         </h1>
     </div>
-    <div class = main>
+    <div class = "container">
     <form action = "/api" method = "post">
-    <ul class = ".flex-outer">
+    <ul class = "flex-outer">
         <li>
             <label for = "first-name">First Name</label>
             <input type = "text" id = "first-name" placeholder = "Enter your first name here">
@@ -39,7 +39,7 @@
         </li>
         <li>
             <p>Age</p>
-            <ul class = ".flex-inner">
+            <ul class = "flex-inner">
                 <li>
                     <input type = "checkbox" id = "eighteen-to-thirtyfive">
                     <label for = "eighteen-to-thirtyfive">18-35</label>
