--- a/public/lab_4/index.html
+++ b/public/lab_4/index.html
@@ -16,14 +16,15 @@
     </div>
     <div class = "container">
     <form action = "/api" method = "post">
+    <div class = "wrapper">
     <ul class = "flex-outer">
         <li>
-            <label for = "first-name">First Name</label>
-            <input type = "text" id = "first-name" placeholder = "Enter your first name here">
+            <label for = "fname">First Name</label>
+            <input type = "text" id = "fname" placeholder = "Enter your first name here">
         </li>
         <li>
-            <label for = "last-name">Last Name</label>
-            <input type = "text" id = "last-name" placeholder = "Enter your last name here">
+            <label for = "lname">Last Name</label>
+            <input type = "text" id = "lname" placeholder = "Enter your last name here">
         </li>
         <li>
             <label for = "email">Email</label>
@@ -39,6 +40,7 @@
         </li>
         <li>
             <p>Age</p>
+        </div>
             <ul class = "flex-inner">
                 <li>
                     <input type = "checkbox" id = "eighteen-to-thirtyfive">
