--- a/public/lab_4/index.html
+++ b/public/lab_4/index.html
@@ -5,7 +5,7 @@
     <title>
         Marta Gonzalez's Lab 4
     </title>
-    <link href="https://fonts.googleapis.com/css2?family=Kufam:ital,wght@1,400;1,500&display=swap" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <link rel = "stylesheet" href = "style.css"/>
 </head>
 <body>
@@ -14,33 +14,31 @@
             Marta Gonzalez's Lab 4
         </h1>
     </div>
-    <div class = "container">
+    <div class = container>
     <form action = "/api" method = "post">
-    <div class = "wrapper">
     <ul class = "flex-outer">
         <li>
             <label for = "fname">First Name</label>
-            <input type = "text" id = "fname" placeholder = "Enter your first name here">
+            <input type = "text" id = "fname" name = "fname" placeholder = "Enter your first name here">
         </li>
         <li>
             <label for = "lname">Last Name</label>
-            <input type = "text" id = "lname" placeholder = "Enter your last name here">
+            <input type = "text" id = "lname" name = "lname" placeholder = "Enter your last name here">
         </li>
         <li>
             <label for = "email">Email</label>
-            <input type = "email" id = "email" placeholder = "Enter your email  here">
+            <input type = "email" id = "email" name = "email" placeholder = "Enter your email  here">
         </li>
         <li>
             <label for = "phone">Phone</label>
-            <input type = "tel" id = "phone" placeholder = "Enter your phone number here">
+            <input type = "tel" id = "phone" name = "phone" placeholder = "Enter your phone number here">
         </li>
         <li>
             <label for = "message">Message</label>
-            <textarea rows = "5" cols = "33" id = "message" placeholder = "Enter your message here"></textarea>
+            <textarea rows = "5" cols = "33" id = "message" name = "message" placeholder = "Enter message here">Message</textarea>
         </li>
         <li>
             <p>Age</p>
-        </div>
             <ul class = "flex-inner">
                 <li>
                     <input type = "checkbox" id = "eighteen-to-thirtyfive">
@@ -57,10 +55,10 @@
             </ul>
         </li>
         <li>
-            <button type = "submit">Submit</button>
-        </li>
+                <button type="submit" id = "button">Submit</button>
+              </li>
     </ul>
+</div>
 </form>
-    </div>
 </body>
 </html>
