--- a/public/lab_4/index.html
+++ b/public/lab_4/index.html
@@ -41,21 +41,21 @@
             <p>Age</p>
             <ul class = "flex-inner">
                 <li>
-                    <input type = "checkbox" id = "eighteen-to-thirtyfive">
+                    <input type = "checkbox" id = "eighteen-to-thirtyfive" name = "checkbox">
                     <label for = "eighteen-to-thirtyfive">18-35</label>
                 </li>
                 <li>
-                    <input type = "checkbox" id = "thirtyfive-to-fifty">
+                    <input type = "checkbox" id = "thirtyfive-to-fifty" name = "checkbox">
                     <label for = "thirtyfive-to-fifty">35-50</label>
                 </li>
                 <li>
-                    <input type = "checkbox" id = "fifty-to-sixtyfive">
+                    <input type = "checkbox" id = "fifty-to-sixtyfive" name = "checkbox">
                     <label for = "fifty-to-sixtyfive">50-65</label>
                 </li>
             </ul>
         </li>
         <li>
-                <button type="submit" id = "button">Submit</button>
+                <button type="submit" id = "button" name = "form button">Submit</button>
               </li>
     </ul>
 </div>
