--- a/asst-1/index.html
+++ b/asst-1/index.html
@@ -16,9 +16,7 @@
     </div>
     <div class="figure">
         <img src="terapinLogo.PNG"
-             alt="The University of Maryland Terrapin Logo"
-             width="400"
-             height="341">
+             alt="The University of Maryland Terrapin Logo">
         <p>The University of Maryland Terrapin Logo</p>
       </div>
 </body>
