--- a/asst-1/index.html
+++ b/asst-1/index.html
@@ -25,27 +25,27 @@
         </li>
         <p>The heart of UMD. A picturesque quad in the middle of campus.</p>
         <ul>
-            <li>Students frequently use this quad to throw up their hammocks and have a nap</li>
+            <li>Students frequently use this quad to throw their hammocks up and have a nap</li>
             <li>Come here to enjoy a scenic picnic or study session with your friends</li>
             <li>The perfect place for a game of frisbee or an outing with your pet</li>
         </ul>
         <li>
             <h2>A. James Clark School of Engineering</h2>
         </li>
-        <p></p>
+        <p>The newest addition to campus. An expansive building with the most modern finish on campus.</p>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Look out for exclusive tours of the rooftop deck</li>
+            <li>Come here to study with peers in any of the many study areas throughout this building</li>
+            <li>Enjoy a meal or a peaceful study break on the lower deck</li>
         </ul>
         <li>
             <h2>Eppley Recreation Center</h2>
         </li>
-        <p></p>
+        <p>A well-equipped recreation center that just about meets your every fitness need.</p>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Take a wide range of heart-pumping group fitness classes here</li>
+            <li>Enroll in a personal trainer program and get one-on-one attention</li>
+            <li>Enjoy your favorite physical activities, from biking to swimming</li>
         </ul>
     </div>
 </body>
