--- a/asst-1/index.html
+++ b/asst-1/index.html
@@ -15,7 +15,7 @@
         </h1>
     </div>
     <div class="figure">
-        <img src="terapinLogo.PNG"
+        <img src="terapinLogo.png"
              alt="The University of Maryland Terrapin Logo">
         <p>The University of Maryland Terrapin Logo</p>
       </div> 
