--- a/asst-1/index.html
+++ b/asst-1/index.html
@@ -19,7 +19,7 @@
              alt="The University of Maryland Terrapin Logo">
         <p>The University of Maryland Terrapin Logo</p>
       </div> 
-    <div class = "header">
+    <div class = "body">
         <ol>
             <li><h2>Mckeldin Mall</h2></li>
         
