--- a/asst-1/index.html
+++ b/asst-1/index.html
@@ -5,7 +5,7 @@
     <title>
         Marta Gonzalez and Olabanji Adeyemi's Assignment 1
     </title>
-    <link href="styles.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <link rel = "stylesheet" href = "style.css"/>
 </head>
 <body>
