--- a/asst-1/index.html
+++ b/asst-1/index.html
@@ -5,10 +5,6 @@
     <title>
         Marta Gonzalez and Olabanji Adeyemi's Assignment 1
     </title>
-    <div class="testudo">
-        <img src="testudo.jpg"
-             alt="The University of Maryland Testudo Statue">
-      </div> 
     <link href="styles.css" rel="stylesheet">
     <link rel = "stylesheet" href = "style.css"/>
 </head>
@@ -17,6 +13,7 @@
         <h1>
             Marta Gonzalez and Olabanji Adeyemi's Assignment 1
         </h1>
+        <img src="testudo.jpg" alt="The University of Maryland Testudo Statue">
     </div>
     <div class="figure">
         <img src="terapinLogo.png"
