--- a/asst-1/index.html
+++ b/asst-1/index.html
@@ -15,6 +15,7 @@
         </h1>
     <img src="testudo.jpg" alt="The University of Maryland Testudo Statue">
     </div>
+    <div class = wrapper>
     <div class="figure">
         <img src="terapinLogo.png"
              alt="The University of Maryland Terrapin Logo">
@@ -49,6 +50,7 @@
             <li>Enjoy your favorite physical activities, from biking to swimming</li>
         </ul>
         </ol>
+    </div>
     </div>
 </body>
 </html>
