--- a/asst-1/index.html
+++ b/asst-1/index.html
@@ -13,9 +13,9 @@
         <h1>
             Marta Gonzalez and Olabanji Adeyemi's Assignment 1
         </h1>
-    <img src="testudo.jpg" alt="The University of Maryland Testudo Statue">
+        <img src="testudo.jpg" alt="The University of Maryland Testudo Statue">
     </div>
-    <div class = wrapper>
+    <div class = "wrapper"></div>
     <div class="figure">
         <img src="terapinLogo.png"
              alt="The University of Maryland Terrapin Logo">
