--- a/asst-1/index.html
+++ b/asst-1/index.html
@@ -9,13 +9,13 @@
     <link rel = "stylesheet" href = "style.css"/>
 </head>
 <body>
+<div class = "wrapper">
     <div class = "header">
         <h1>
             Marta Gonzalez and Olabanji Adeyemi's Assignment 1
         </h1>
         <img src="testudo.jpg" alt="The University of Maryland Testudo Statue">
     </div>
-    <div class = "wrapper"></div>
     <div class="figure">
         <img src="terapinLogo.png"
              alt="The University of Maryland Terrapin Logo">
@@ -51,6 +51,6 @@
         </ul>
         </ol>
     </div>
-    </div>
+</div>
 </body>
 </html>
