--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -15,7 +15,7 @@
     </div>
 <div class = "wrapper">
         <div class = "container">
-            <div class = "content">
+            <div class = "content1">
                     <img src="terapinLogo.png"
                     alt="The University of Maryland Terrapin Logo">
                     <p>The University of Maryland Terrapin Logo</p>
