--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -5,50 +5,61 @@
     <title>
         Marta Gonzalez and Olabanji Adeyemi's Assignment 1
     </title>
-    <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&display=swap" rel="stylesheet">
     <link rel = "stylesheet" href = "style.css"/>
+
 </head>
 <body>
+<div class = "wrapper">
     <div class = "header">
         <h1>Marta Gonzalez and Olabanji Adeyemi's Assignment 1</h1>
             <img src="testudo.jpg" alt="The University of Maryland Testudo Statue">
     </div>
-<div class = "wrapper">
-        <div class = "container">
-            <div class = "content1">
+    <div class = "container">
+        <div class = "figure">
                     <img src="terapinLogo.png"
                     alt="The University of Maryland Terrapin Logo">
                     <p>The University of Maryland Terrapin Logo</p>
-            </div>
-            <div class = "content">
-                <h1>Top UMD Locations</h1>
+        </div>
+        <div class = "content">
+                <h2>Top UMD Locations</h2>
+                    <p>Visit these places for the true UMD experience!</p>
                 <ol>
-                    <li><h2>Mckeldin Mall</h2>
-                    <p>The heart of UMD. A picturesque quad in the middle of campus.</p>
-                    <ul>
-                        <li>Students frequently use this quad to throw their hammocks up and have a nap</li>
-                        <li>Come here to enjoy a scenic picnic or study session with your friends</li>
-                        <li>The perfect place for a game of frisbee or an outing with your pet</li>
-                    </ul>
+                    <li>
+                        <h2>Mckeldin Mall</h2>
+                        <p>The heart of UMD. A picturesque quad in the middle of campus.</p>
+                        <div class = "sublist">
+                        <ul class = "item">
+                            <li>Students frequently use this quad to throw their hammocks up and have a nap</li>
+                            <li>Come here to enjoy a scenic picnic or study session with your friends</li>
+                            <li>The perfect place for a game of frisbee or an outing with your pet</li>
+                        </ul>
+                        </div>
                     </li>
-                    <li><h2>A. James Clark School of Engineering</h2>
-                        <p>The newest addition to campus. An expansive building with the most modern finish on campus.</p>
-                        <ul>
+                    <li>
+                        <h2>A. James Clark School of Engineering</h2>
+                            <p>The newest addition to campus. An expansive building with the most modern finish on campus.</p>
+                        <div class = "sublist">
+                        <ul class = "item">
                             <li>Look out for exclusive tours of the rooftop deck</li>
                             <li>Come here to study with peers in any of the many study areas throughout this building</li>
                             <li>Enjoy a meal or a peaceful study break on the lower deck</li>
                         </ul>
+                        </div>
                     </li>
-                    <li><h2>Eppley Recreation Center</h2>
-                        <p>A well-equipped recreation center that just about meets your every fitness need.</p>
-                        <ul>
+                    <li>
+                        <h2>Eppley Recreation Center</h2>
+                            <p>A well-equipped recreation center that just about meets your every fitness need.</p>
+                        <div class = "sublist">
+                        <ul class = "item">
                             <li>Take a wide range of heart-pumping group fitness classes here</li>
                             <li>Enroll in a personal trainer program and get one-on-one attention</li>
                             <li>Enjoy your favorite physical activities, from biking to swimming</li>
                         </ul>
+                        </div>
                     </li>
                 </ol>
-                    </div>
+            </div>
 </div>
 </div>
 </body>
