--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -5,7 +5,7 @@
     <title>
         Marta Gonzalez and Olabanji Adeyemi's Assignment 1
     </title>
-    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700" rel="stylesheet">
     <link rel = "stylesheet" href = "style.css"/>
 
 </head>
