--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -6,7 +6,7 @@
         Marta Gonzalez and Olabanji Adeyemi's Assignment 1
     </title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700" rel="stylesheet">
-    <link rel = "stylesheet" href = "style.css"/>
+    <link rel = "stylesheet" href = "styles.css"/>
 
 </head>
 <body>
@@ -16,7 +16,7 @@
             <img src="testudo.jpg" alt="The University of Maryland Testudo Statue">
     </div>
     <div class = "container">
-        <div class = "figure">
+        <div class = "image">
                     <img src="terapinLogo.png"
                     alt="The University of Maryland Terrapin Logo">
                     <p>The University of Maryland Terrapin Logo</p>
