--- a/public/lab_5/index.html
+++ b/public/lab_5/index.html
@@ -76,7 +76,7 @@
 
     const btn = document.getElementById('new-button');
     const newcol = 'rgb('+255+','+0+','+0+')';
-    btn.onclick = document.body.style.background = newcol;
+    document.body.style.background = newcol;
 
     const check = document.querySelector('p');
     check.textContent = "Fruits";
