--- a/public/lab_5/index.html
+++ b/public/lab_5/index.html
@@ -81,6 +81,7 @@
     const check = document.querySelector('p');
     check.textContent = "Fruits";
 
+    const array = ['Apple', 'Orange', 'Banana'];
     
 }
 </script>
