--- a/public/lab_6/index.html
+++ b/public/lab_6/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+      <title>Marta Gonzalez's Lab 6</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -9,6 +10,9 @@
     ></script>
   </head>
   <body>
+    <div class = "header">
+        <h1>Marta Gonzalez's Lab 6</h1>
+    </div>
     <div class="wrapper">
       <div class="container flex-outer">
         <div class="header">
