--- a/public/lab_7/index.html
+++ b/public/lab_7/index.html
@@ -9,5 +9,38 @@
 
     - TRY THIS: type "doc" at the top of this file and press "tab" for Emmet autocomplete support
 -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+      <title>Marta Gonzalez's Lab 7</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div class = "header">
+        <h1>Marta Gonzalez's Lab 7</h1>
+    </div>
+    <div id = "chartContainer"></div>
+    <div class="wrapper">
+      <div class="container flex-outer">
+        <div class="header">
+        </div>
+        <form>
+          <button
+            type="submit"
+            class="submitButton"
+            name="submitButton"
+          >Create A Checklist</button>
+        </form>
+      </div>
+    </div>
+    <script src="script.js"></script>
+    <script src="canvasjs.min.js"></script>
+  </body>
+</html>
 
 
